--- a/index.html
+++ b/index.html
@@ -2,22 +2,7 @@
 layout: layout
 title: ""
 ---
-DSP Engineer with masters from RWTH Aachen, Germany and a unique blend of software engineering, signal processing and wireless communication expertise.
-
-Currently, as a DSP engineer at CommAgility, working on LTE L1-L2 interface (FAPI).
-
-Most recently, as a DSP engineer at OQ Technology, I worked on development of new protocol for earth-to-LEO communication links. Key tasks included simulation, and calibration of full transceiver chain, including modulation and forward-error-correction. Challenge was to come up with low-complexity methods for detection and synchronization that can specifically handle the large range of Doppler impairments. The outcome of this work has been implemented and will be used in space.
-
-Prior to that, In my master thesis at Airbus Defence & Space, I worked on 802.11ax PHY, proposed methods to estimate the channel response in the presence of FMCW radar interference. During my internship at National Instruments Dresden, I worked on 5G open source protocol stack development where I added missing features.
-
-SKILLS
-Programming: MATLAB, C/C++, Python
-Tools: Network Simulator (NS-3), GDB, Eclipse, Wireshark, LabView, RTOS
-Productivity: Git, Linux, LaTeX, Bash/Shell scripting.
-Technologies: 4G (LTE), 5G (NR), 802.11ax (Link/System level simulations)
-
-Reach me at:
-chinmaybhat94@gmail.com
+about.html
 {% include employment.html %}
 
 {% include education.html %}
