--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: layout
 title: ""
 ---
-<div data-include="/path/to/about.html"></div>
+<div data-include="/_includes/about.html"></div>
 {% include employment.html %}
 
 {% include education.html %}
