--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: ""
     <article>
        
                   
- <p> I'm currently working as a Signal Processing Engineering at <a href="https://www.commagility.com/">CommAgility Ltd</a>, an LTE PHY/Stack software provider based in Germany. Most recently, I worked as a DSP Engineer at OQ technology, a LEO Satellite IOT startup in Luxembourg. </p> 
+ <p> I'm currently working as a Signal Processing Engineering at <a href="https://www.commagility.com/"><mark class="blue">CommAgility Ltd</mark></a>, an LTE PHY/Stack software provider based in Germany. Most recently, I worked as a DSP Engineer at OQ technology, a LEO Satellite IOT startup in Luxembourg. </p> 
         <br>
 
 <p> I completed my Master's from RWTH Aachen University, Germany & Bachelor's from PESIT, Bangalore. . </p>
