--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: ""
     <article>
        
                   
- <p> I'm currently working as a Signal Processing Engineer at <a href="https://www.commagility.com/"><font color="blue">CommAgility Ltd</font></a>, 5G/LTE RAN embedded software provider based in Germany. Most recently, I worked as a DSP Engineer at <a href="https://www.oqtec.space/"><font color="blue">OQ Technology</font></a>, a LEO Satellite IOT startup in Luxembourg. </p> 
+ <p> I'm currently working as a DSP Engineer at <a href="https://www.commagility.com/"><font color="blue">CommAgility Ltd</font></a>, 5G/LTE RAN embedded software provider based in Germany. Most recently, I worked as a DSP Engineer at <a href="https://www.oqtec.space/"><font color="blue">OQ Technology</font></a>, a LEO Satellite IOT startup in Luxembourg. </p> 
         <br>
 
 <p> I completed my Master's from <a href="https://www.elektrotechnik.rwth-aachen.de/go/id/inou/?lidx=1"><font color="blue">RWTH Aachen University</font></a>, Germany & Bachelor's from <a href="https://ec.pes.edu/"><font color="blue">PESIT, Bangalore</font></a>. </p>
