--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ title: ""
 <p> I'm interested in programming for wireless communications with the focus on PHY.  </p>
         <br>
         
-<p> I'm a regular Badminton player and hiker. I spend my free time reading books/traveling/meeting people.  </p>
+<p> I'm a regular Badminton player and active hiker. I spend my free time reading books/traveling/meeting people.  </p>
         <br>
         
  <p> Feel free to reach me at <a href="mailto:chinmaybhat94@gmial.com"><font color="blue">chinmaybhat94@gmail.com</font></a> </p>
