--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ title: ""
  <p> Reach me at <a href="mailto:chinmaybhat94@gmial.com"><font color="blue">chinmaybhat94@gmail.com</font></a> </p>
         <br>       
         
- <p>    Personal Blog - <a href="chinmaybhat99.substack.com"><font color="blue">Summarizing Ideas on Tech, Psychology</font></a> </p>
+ <p>    Personal Blog - <a href="https://chinmaybhat99.substack.com/"><font color="blue">Summarizing Ideas on Tech, Psychology</font></a> </p>
         <br>
     </article>
     
